--- a/package.json
+++ b/package.json
@@ -16,16 +16,14 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
-    "expo-checkbox": "^2.5.0",
+    "expo-checkbox": "~2.4.0",
     "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^4.0.13",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-vector-icons": "^10.0.1",
-    "tailwindcss": "^3.3.5",
-    "twrnc": "^3.6.4"
+    "react-native": "0.72.5",
+    "react-native-vector-icons": "^10.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
