--- a/app.json
+++ b/app.json
@@ -20,10 +20,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.miraclesoftware_dev.Hse"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "452547db-c567-4cfc-9778-a26ecad6c62b"
+      }
     }
   }
 }
