--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 /**
- * Copyright 2023 Miracle Software 
+ * Copyright 2023 ROU Technology
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,12 +14,4 @@
  * limitations under the License.
  */
 
-import { Asset } from 'expo-asset';
-import { createContext } from 'react';
 
-const AssetsContext = createContext({
-  assets: [] ,
-  setAssets: (assets) => {},
-});
-
-export default AssetsContext;
