--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hse",
+  "name": "HSE",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -11,23 +11,52 @@
   "dependencies": {
     "@expo-google-fonts/lato": "^0.2.3",
     "@expo-google-fonts/righteous": "^0.2.3",
+    "@expo-google-fonts/sora": "^0.2.3",
     "@expo/metro-config": "~0.10.0",
     "@expo/vector-icons": "^13.0.0",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
-    "expo": "~49.0.15",
-    "expo-checkbox": "~2.4.0",
+    "@hookform/resolvers": "^3.2.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "axios": "^1.5.0",
+    "expo-app-loading": "^2.1.1",
+    "expo-env": "^1.1.1",
     "expo-font": "~11.4.0",
+    "expo-linear-gradient": "~12.3.0",
+    "expo-location": "~16.1.0",
+    "expo-secure-store": "~12.3.1",
+    "expo-checkbox": "2.5.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
-    "nativewind": "^4.0.13",
+    "formik": "^2.4.3",
     "react": "18.2.0",
-    "react-native": "0.72.5",
-    "react-native-vector-icons": "^10.0.1"
+    "react-hook-form": "^7.45.4",
+    "react-native": "0.72.3",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
+    "react-native-masked-text": "^1.13.0",
+    "react-native-paper": "^5.10.1",
+    "react-native-polyfill": "^1.2.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
+    "react-native-svg-transformer": "1.0.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-web": "~0.19.6",
+    "url-polyfill": "^1.1.12",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "react-native-dotenv": "^3.4.9"
+    "@types/googlemaps": "^3.43.3",
+    "@types/react": "~18.2.14",
+    "@types/react-native": "^0.72.2",
+    "@types/react-native-vector-icons": "^6.4.13",
+    "react-native-dotenv": "^3.4.9",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
